--- a/src/main/webapp/WEB-INF/reports/otherreports/rprt_diagnostico.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rprt_diagnostico.jrxml
@@ -49,113 +49,113 @@ FROM
 				<reportElement mode="Transparent" x="0" y="140" width="802" height="28" backcolor="#FFFFFF" uuid="2077d095-b63c-4cf3-84f8-adbd8776b298"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="143" y="0" width="469" height="20" uuid="2a6d1d68-ec28-4ce0-9479-3a2f587672da"/>
+				<reportElement x="146" y="0" width="469" height="20" uuid="2a6d1d68-ec28-4ce0-9479-3a2f587672da"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
-				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
+				<text><![CDATA[MINISTERIO DE JUSTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="143" y="20" width="469" height="20" uuid="c9f35e08-fd6f-4130-bae8-b4fa8f22f48f"/>
+				<reportElement x="146" y="20" width="469" height="20" uuid="c9f35e08-fd6f-4130-bae8-b4fa8f22f48f"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="696" y="82" width="74" height="20" uuid="076ef3a0-2097-4aaa-9894-fbf0bc542261"/>
+				<reportElement x="630" y="79" width="66" height="20" uuid="076ef3a0-2097-4aaa-9894-fbf0bc542261"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="143" y="62" width="469" height="20" uuid="bae40fe9-8307-4c76-a506-d86633d7ca33"/>
+				<reportElement x="146" y="60" width="469" height="20" uuid="bae40fe9-8307-4c76-a506-d86633d7ca33"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
-				<text><![CDATA[REPORTE DE TEMAS DE DIAGNOSTICOS DE NECESIDADES DE CAPACITACION]]></text>
+				<text><![CDATA[REPORTE DE TEMAS DE DIAGNOSTICOS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="648" y="62" width="114" height="20" uuid="559ea0b1-4898-4e78-aa4b-db6bf7458b73"/>
+				<reportElement x="8" y="74" width="100" height="20" uuid="559ea0b1-4898-4e78-aa4b-db6bf7458b73"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="732" y="62" width="70" height="20" uuid="0ad030e7-e277-4119-882c-bd6f55542631"/>
+				<reportElement x="78" y="74" width="70" height="20" uuid="0ad030e7-e277-4119-882c-bd6f55542631"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="776" y="82" width="26" height="20" uuid="48b6b3f8-e37b-4431-9121-91d9969e3d70"/>
+				<reportElement x="696" y="79" width="26" height="20" uuid="48b6b3f8-e37b-4431-9121-91d9969e3d70"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="255" y="100" width="39" height="20" uuid="96cda1ba-50d3-41d9-8c87-266ccc7527e4"/>
+				<reportElement x="287" y="100" width="39" height="20" uuid="96cda1ba-50d3-41d9-8c87-266ccc7527e4"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="413" y="100" width="39" height="20" uuid="cfc4dc53-d543-4622-bc13-b103f7f03d60"/>
+				<reportElement x="408" y="100" width="39" height="20" uuid="cfc4dc53-d543-4622-bc13-b103f7f03d60"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="294" y="100" width="100" height="20" uuid="4d9056bf-eba7-4846-a97c-eac3c216246f"/>
+				<reportElement x="313" y="100" width="100" height="20" uuid="4d9056bf-eba7-4846-a97c-eac3c216246f"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="452" y="100" width="100" height="20" uuid="44f6b7f0-29e4-471f-add8-a1a4465e95a0"/>
+				<reportElement x="436" y="100" width="100" height="20" uuid="44f6b7f0-29e4-471f-add8-a1a4465e95a0"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="660" y="100" width="39" height="20" uuid="03d58d94-5f45-46ab-86dd-8ffd6e701afe"/>
+				<reportElement x="649" y="63" width="39" height="20" uuid="03d58d94-5f45-46ab-86dd-8ffd6e701afe"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="702" y="100" width="100" height="20" uuid="ef6eb4ca-5ac7-4cfc-a33d-072ffdde33b4"/>
+				<reportElement x="688" y="63" width="82" height="20" uuid="ef6eb4ca-5ac7-4cfc-a33d-072ffdde33b4"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="0" y="20" width="143" height="38" uuid="3f317ef7-1bfc-4fb5-b34e-3bc77589b327"/>
+				<reportElement x="0" y="2" width="143" height="45" uuid="3f317ef7-1bfc-4fb5-b34e-3bc77589b327"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="648" y="10" width="123" height="48" uuid="7a050bb1-28d3-4e6f-af40-49269d9b7268"/>
+				<reportElement x="647" y="-1" width="123" height="61" uuid="7a050bb1-28d3-4e6f-af40-49269d9b7268"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="13" y="82" width="100" height="20" uuid="0a8f31e9-ef51-4c68-9055-c7bf485e9765"/>
+				<reportElement x="9" y="48" width="100" height="20" uuid="0a8f31e9-ef51-4c68-9055-c7bf485e9765"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[pnt_reporte_tdnc]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="143" y="40" width="469" height="20" uuid="4dc55cf8-46cb-4f65-9656-b211d013d1ed"/>
+				<reportElement x="146" y="40" width="469" height="20" uuid="4dc55cf8-46cb-4f65-9656-b211d013d1ed"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
@@ -191,21 +191,21 @@ FROM
 				<textElement textAlignment="Center">
 					<font size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Direccion]]></text>
+				<text><![CDATA[Dirección]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="238" y="149" width="123" height="18" forecolor="#000000" uuid="2190657d-5372-48e2-a52d-7903820fbf29"/>
 				<textElement textAlignment="Center">
 					<font size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Necesidades de Capacitacion]]></text>
+				<text><![CDATA[Necesidades de Capacitación]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="361" y="149" width="91" height="18" forecolor="#000000" uuid="6f223216-894c-49e0-9ba6-d4b72a75374d"/>
 				<textElement textAlignment="Center">
 					<font size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Mes de Capacitacion]]></text>
+				<text><![CDATA[Mes de Capacitación]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="465" y="149" width="117" height="18" forecolor="#000000" uuid="9b8b9726-ff7b-4097-8c89-514478881e75"/>
@@ -228,6 +228,13 @@ FROM
 				</textElement>
 				<text><![CDATA[Cargo quien Autoriza]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="146" y="80" width="469" height="20" uuid="501cd8e7-92fd-4fc8-b38d-9f12fc029a40"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ DE NECESIDADES DE CAPACITACION]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
@@ -237,7 +244,7 @@ FROM
 		<band height="3" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="20" splitType="Stretch">
+		<band height="26" splitType="Stretch">
 			<textField>
 				<reportElement x="238" y="0" width="100" height="14" uuid="af8db28f-dbd5-4c5c-8d5f-5b0047e5f7ac"/>
 				<textElement>
@@ -273,7 +280,7 @@ FROM
 				</textElement>
 				<textFieldExpression><![CDATA[$F{diagnosticocapacitacion_cargoautorizadiagnosticocapacitacion}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="12" y="3" width="100" height="14" uuid="56275a00-1c9a-4f48-b403-ae3101373261"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="false"/>
@@ -289,21 +296,26 @@ FROM
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="19" splitType="Stretch"/>
-	</columnFooter>
 	<pageFooter>
-		<band height="15" splitType="Stretch">
+		<band height="25" splitType="Stretch">
+			<staticText>
+				<reportElement x="303" y="5" width="192" height="20" uuid="b7ba2405-7c45-42eb-b67a-361b336582fd"/>
+				<textElement>
+					<font fontName="Times New Roman" size="12"/>
+				</textElement>
+				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
+			</staticText>
+		</band>
+	</pageFooter>
+	<summary>
+		<band height="27" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="0" width="802" height="13" backcolor="#FFFFFF" uuid="9bf10d63-7d84-4b29-a32d-2840bc8ae7e7"/>
+				<reportElement mode="Opaque" x="-32" y="0" width="802" height="13" backcolor="#FFFFFF" uuid="9bf10d63-7d84-4b29-a32d-2840bc8ae7e7"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9" isBold="false" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
-	</pageFooter>
-	<summary>
-		<band splitType="Stretch"/>
 	</summary>
 </jasperReport>
