--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3efb06ae-db0d-441a-8882-24e35fcd8a5a">
-	<property name="ireport.zoom" value="1.3310000000000073"/>
+	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="IMAGE_PATH" class="java.lang.String" isForPrompting="false">
@@ -20,9 +20,9 @@
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT   concat(e.nombreempleado,' ',e.apellidoempleado) as Empleado ,p.nombrepuesto,ca.duracionhoracapacitacion,ca.nombrecapacitacion,
-ca.departamentoresponsable,DATE_FORMAT(ca.fechacapacitaciondesde, '%d/%m/%Y') as Desde, DATE_FORMAT(ca.fechacapacitacionhasta, '%d/%m/%Y') as Hasta from empleado e 
+ca.departamentoresponsable,DATE_FORMAT(ca.fechacapacitaciondesde, '%d/%m/%Y') as Desde, DATE_FORMAT(ca.fechacapacitacionhasta, '%d/%m/%Y') as Hasta from empleado e
 
- inner join puesto p on e.codigopuesto=p.codigopuesto 
+ inner join puesto p on e.codigopuesto=p.codigopuesto
  inner join empleadocapacitacion ec on e.codigoempleado=ec.codigoempleado
  INNER JOIN capacitacion ca on ec.codigocapacitacion=ca.codigocapacitacion
 
