--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitador.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitador.jrxml
@@ -39,114 +39,115 @@ FROM
 	<title>
 		<band height="123">
 			<textField>
-				<reportElement x="455" y="83" width="74" height="20" uuid="381ade50-b892-440a-9f60-ac9752613405"/>
+				<reportElement x="425" y="58" width="60" height="20" uuid="381ade50-b892-440a-9f60-ac9752613405"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="496" y="63" width="70" height="20" uuid="5fb20cd9-d5af-4494-8485-fe34e1872912"/>
+				<reportElement x="83" y="65" width="60" height="20" uuid="5fb20cd9-d5af-4494-8485-fe34e1872912"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="418" y="63" width="114" height="20" uuid="df2e868f-1920-437e-a2e8-b629d7dd1694"/>
+				<reportElement x="4" y="65" width="89" height="20" uuid="df2e868f-1920-437e-a2e8-b629d7dd1694"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
-				<text><![CDATA[Fecha de Generacion:]]></text>
+				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="138" y="0" width="265" height="20" uuid="dde66ef4-874e-481c-9b36-fbd78bb8a8ea"/>
-				<textElement textAlignment="Center">
+				<reportElement x="153" y="0" width="265" height="20" uuid="c300e3ee-2a13-424d-ad94-ed33ddc6fe70"/>
+				<textElement textAlignment="Center" markup="none">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
-				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
+				<text><![CDATA[MINISTERIO DE JUSTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="138" y="73" width="265" height="20" uuid="576d3dc8-2b82-4530-b594-b77a6de495c0"/>
-				<textElement textAlignment="Center">
+				<reportElement positionType="FixRelativeToBottom" x="156" y="58" width="264" height="23" uuid="83a9722d-5e32-4bca-901a-b1dc7b25149a"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="None" markup="none">
 					<font fontName="Times New Roman" isBold="true"/>
+					<paragraph lineSpacing="Proportional"/>
 				</textElement>
 				<text><![CDATA[REPORTE DE CAPACITADORES]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="138" y="20" width="265" height="20" uuid="73dabb7b-2083-466a-bc66-04e0d1d02f42"/>
-				<textElement textAlignment="Center">
+				<reportElement x="154" y="20" width="265" height="20" uuid="739e3806-a8a4-4126-a98f-a9659c212222"/>
+				<textElement textAlignment="Center" markup="none">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="529" y="83" width="26" height="20" uuid="0e4a0f73-d910-4993-b03e-1b1f92695f7d"/>
+				<reportElement x="485" y="58" width="12" height="20" uuid="0e4a0f73-d910-4993-b03e-1b1f92695f7d"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="179" y="103" width="100" height="20" uuid="d6e71bd6-1338-4325-8f1f-f930ffda16ba"/>
+				<reportElement x="239" y="96" width="91" height="20" uuid="d6e71bd6-1338-4325-8f1f-f930ffda16ba"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="279" y="103" width="39" height="20" uuid="009281ea-aadf-4969-bc06-5909ec18c5db"/>
+				<reportElement x="306" y="96" width="40" height="20" uuid="009281ea-aadf-4969-bc06-5909ec18c5db"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="140" y="103" width="39" height="20" uuid="b9dd5fa4-1069-4c39-b64d-2ac7f4476240"/>
+				<reportElement x="211" y="96" width="39" height="20" uuid="b9dd5fa4-1069-4c39-b64d-2ac7f4476240"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="437" y="103" width="39" height="20" uuid="28b28125-10b9-419f-897a-3b2ac3051788"/>
+				<reportElement x="442" y="43" width="39" height="17" uuid="28b28125-10b9-419f-897a-3b2ac3051788"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="476" y="103" width="100" height="20" uuid="367640ed-9134-4e33-96a4-9b970151d75e"/>
+				<reportElement x="483" y="43" width="72" height="17" uuid="367640ed-9134-4e33-96a4-9b970151d75e"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="318" y="103" width="100" height="20" uuid="91f40ec5-61ec-441f-9ff0-423a22f05acd"/>
+				<reportElement x="344" y="96" width="73" height="20" uuid="91f40ec5-61ec-441f-9ff0-423a22f05acd"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="0" y="20" width="143" height="38" uuid="93a0189e-aae1-45b9-9927-e19e102e9ae3"/>
+				<reportElement x="0" y="2" width="143" height="38" uuid="93a0189e-aae1-45b9-9927-e19e102e9ae3"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="432" y="10" width="123" height="48" uuid="5a44a052-5746-4181-bbdf-c8df2e4e26b6"/>
+				<reportElement x="442" y="0" width="113" height="44" uuid="5a44a052-5746-4181-bbdf-c8df2e4e26b6"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="4" y="83" width="85" height="20" uuid="51dcab81-c76a-4166-a63d-18beb65577c5"/>
+				<reportElement x="4" y="38" width="85" height="20" uuid="51dcab81-c76a-4166-a63d-18beb65577c5"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[pnt_reporte_cado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="143" y="43" width="265" height="20" uuid="addf5344-96b5-487e-9ee6-348d429903aa"/>
-				<textElement textAlignment="Center">
+				<reportElement x="155" y="40" width="265" height="20" uuid="34e066ad-376c-43a1-95fa-93350f70b73a"/>
+				<textElement textAlignment="Center" markup="none">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
@@ -157,53 +158,53 @@ FROM
 		<band/>
 	</pageHeader>
 	<columnHeader>
-		<band height="38">
+		<band height="39">
 			<rectangle>
-				<reportElement x="0" y="11" width="552" height="27" backcolor="#FFFFFF" uuid="88708dc7-3fb2-43b9-88cf-eef3dd410f4e"/>
+				<reportElement x="0" y="11" width="510" height="27" backcolor="#FFFFFF" uuid="88708dc7-3fb2-43b9-88cf-eef3dd410f4e"/>
 			</rectangle>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="18" width="100" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="5bad4120-5e48-417e-93e9-744284a3fe27"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="0" y="11" width="100" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="5bad4120-5e48-417e-93e9-744284a3fe27"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Capacitador]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="110" y="18" width="101" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="90329b24-197c-409f-ad29-8bb7c4f12749"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="103" y="11" width="101" height="26" forecolor="#000000" backcolor="#E6E6E6" uuid="90329b24-197c-409f-ad29-8bb7c4f12749"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tipo Capacitador]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="221" y="18" width="85" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="4bed08c9-10e1-4d1b-8112-5d8cdbc2fdcd"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="204" y="11" width="85" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="4bed08c9-10e1-4d1b-8112-5d8cdbc2fdcd"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Telefono Movil]]></text>
+				<text><![CDATA[Teléfono Movil]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="306" y="18" width="112" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="e5b0ded0-c0d8-4746-a333-f306e0fe286e"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="290" y="11" width="127" height="26" forecolor="#000000" backcolor="#E6E6E6" uuid="e5b0ded0-c0d8-4746-a333-f306e0fe286e"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Email]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="418" y="18" width="134" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="a80af39f-1e86-4180-8969-4323788b37d3"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="418" y="11" width="92" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="a80af39f-1e86-4180-8969-4323788b37d3"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Temas de Docminio]]></text>
+				<text><![CDATA[Temas de Dominio]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement x="109" y="11" width="1" height="27" uuid="4535c894-e87d-4ecd-a98f-37ff0c33f3cc"/>
+				<reportElement x="102" y="11" width="1" height="27" uuid="4535c894-e87d-4ecd-a98f-37ff0c33f3cc"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="220" y="11" width="1" height="27" uuid="e3d77288-5cc6-418d-be1a-835371ec200f"/>
+				<reportElement x="204" y="11" width="1" height="27" uuid="e3d77288-5cc6-418d-be1a-835371ec200f"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="306" y="11" width="1" height="27" uuid="c45af939-c5e5-4f47-8c54-129eb64fa57b"/>
+				<reportElement x="289" y="11" width="1" height="27" uuid="c45af939-c5e5-4f47-8c54-129eb64fa57b"/>
 			</line>
 			<line direction="BottomUp">
 				<reportElement x="417" y="11" width="1" height="27" uuid="0cfe2ca1-0685-462b-af20-290ca142c9a1"/>
@@ -211,59 +212,64 @@ FROM
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="21">
+		<band height="22">
 			<textField isStretchWithOverflow="true">
-				<reportElement x="0" y="0" width="100" height="20" uuid="b3d555ca-2d9d-4428-a708-b5df7daf20b4"/>
-				<textElement textAlignment="Center">
+				<reportElement x="2" y="0" width="100" height="20" uuid="b3d555ca-2d9d-4428-a708-b5df7daf20b4"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{capacitador_nombrecapacitador}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="110" y="0" width="101" height="20" uuid="db631a7c-a4e1-4932-b58a-2a3aa4c874e8"/>
-				<textElement textAlignment="Center">
+				<reportElement x="103" y="0" width="101" height="20" uuid="db631a7c-a4e1-4932-b58a-2a3aa4c874e8"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{capacitador_tipocapacitador}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="221" y="0" width="85" height="20" uuid="17518cf7-92f1-40ba-b458-314b9d67d4a4"/>
-				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{capacitador_telefonomovilcapacitador}]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement x="306" y="0" width="112" height="20" uuid="44d3df89-ca59-4001-82bb-4ab68e8667f2"/>
-				<textElement textAlignment="Center">
+				<reportElement x="289" y="0" width="128" height="20" uuid="44d3df89-ca59-4001-82bb-4ab68e8667f2"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{capacitador_emailcapacitador}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="418" y="0" width="134" height="20" uuid="b2602596-d40c-4f43-af5e-9ec35ff47311"/>
-				<textElement textAlignment="Center">
+				<reportElement x="420" y="0" width="90" height="20" uuid="b2602596-d40c-4f43-af5e-9ec35ff47311"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{capacitador_temadominio}]]></textFieldExpression>
 			</textField>
+			<textField isStretchWithOverflow="true">
+				<reportElement x="204" y="0" width="85" height="20" uuid="17518cf7-92f1-40ba-b458-314b9d67d4a4"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{capacitador_telefonomovilcapacitador}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band/>
-	</columnFooter>
 	<pageFooter>
-		<band height="17">
+		<band height="50">
+			<staticText>
+				<reportElement x="172" y="30" width="192" height="20" uuid="acd5b0ff-6fc4-42a1-bddd-8f2c73c5e95b"/>
+				<textElement>
+					<font fontName="Times New Roman" size="12"/>
+				</textElement>
+				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
+			</staticText>
+		</band>
+	</pageFooter>
+	<summary>
+		<band height="34">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="4" y="4" width="555" height="13" backcolor="#FFFFFF" uuid="49530a96-c282-4137-9bcf-092e6b63a991"/>
+				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="307" y="12" width="227" height="13" isRemoveLineWhenBlank="true" isPrintInFirstWholeBand="true" backcolor="#FFFFFF" uuid="49530a96-c282-4137-9bcf-092e6b63a991"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
-	</pageFooter>
-	<summary>
-		<band/>
 	</summary>
 </jasperReport>
