--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
@@ -33,13 +33,16 @@
 	<field name="salarioactual" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<variable name="salarioactual_1" class="java.lang.Float" calculation="Sum">
+		<variableExpression><![CDATA[$F{salarioactual}]]></variableExpression>
+	</variable>
 	<background>
 		<band/>
 	</background>
 	<title>
 		<band height="131">
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="496" y="60" width="70" height="20" uuid="20bb02c0-d567-44d4-b2c4-4c0ea68070ae"/>
+				<reportElement x="70" y="80" width="70" height="20" uuid="20bb02c0-d567-44d4-b2c4-4c0ea68070ae"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -50,7 +53,7 @@
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
-				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
+				<text><![CDATA[MINISTERIO DE JUSTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="143" y="20" width="265" height="20" uuid="1efec528-ea58-419e-a39f-866945c1694f"/>
@@ -60,7 +63,7 @@
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="455" y="80" width="74" height="20" uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4"/>
+				<reportElement x="408" y="81" width="74" height="20" uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -74,28 +77,28 @@
 				<text><![CDATA[REPORTE DE NUEVAS CONTRATACIONES]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="529" y="80" width="26" height="20" uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81"/>
+				<reportElement x="482" y="81" width="26" height="20" uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="409" y="60" width="114" height="20" uuid="8cae14a6-c433-461f-a07b-c8abf6c60049"/>
+				<reportElement x="6" y="80" width="91" height="20" uuid="8cae14a6-c433-461f-a07b-c8abf6c60049"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
-				<text><![CDATA[Fecha de Generacion:]]></text>
+				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="416" y="98" width="39" height="20" uuid="8db62085-9fe6-4b69-b055-d239c583ecf5"/>
+				<reportElement x="436" y="61" width="39" height="20" uuid="8db62085-9fe6-4b69-b055-d239c583ecf5"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="277" y="100" width="39" height="20" uuid="f8a6159b-88a9-44b2-aa21-e0b4af67a7c3"/>
+				<reportElement x="289" y="100" width="39" height="20" uuid="f8a6159b-88a9-44b2-aa21-e0b4af67a7c3"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -109,36 +112,36 @@
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="455" y="98" width="100" height="20" uuid="3f676349-db7f-408e-88f1-b1850570b533"/>
+				<reportElement x="475" y="61" width="100" height="20" uuid="3f676349-db7f-408e-88f1-b1850570b533"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="144" y="100" width="39" height="20" uuid="17454eab-9cc6-4f5e-91a6-0bc0832a2b43"/>
+				<reportElement x="172" y="100" width="39" height="20" uuid="17454eab-9cc6-4f5e-91a6-0bc0832a2b43"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="177" y="100" width="100" height="20" uuid="664f04b5-48d9-405f-b80d-da039a387770"/>
+				<reportElement x="199" y="100" width="100" height="20" uuid="664f04b5-48d9-405f-b80d-da039a387770"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="418" y="10" width="123" height="48" uuid="a2ddf854-1451-44aa-ad8f-8c7a824aaf93"/>
+				<reportElement x="432" y="0" width="123" height="60" uuid="a2ddf854-1451-44aa-ad8f-8c7a824aaf93"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="0" y="20" width="143" height="38" uuid="c6efa9b9-a500-4a0f-bb16-409eeac06829"/>
+				<reportElement x="0" y="0" width="120" height="58" uuid="c6efa9b9-a500-4a0f-bb16-409eeac06829"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="0" y="80" width="79" height="20" uuid="e7d9fc24-1992-422f-a262-0dec7e9bcb4b"/>
+				<reportElement x="6" y="58" width="79" height="20" uuid="e7d9fc24-1992-422f-a262-0dec7e9bcb4b"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -157,91 +160,84 @@
 		<band/>
 	</pageHeader>
 	<columnHeader>
-		<band height="38">
+		<band height="42">
 			<rectangle>
-				<reportElement x="0" y="4" width="553" height="28" backcolor="#FFFFFF" uuid="5d2c9f60-e28f-42c9-bf6c-cd5f2a0cf21d"/>
+				<reportElement x="0" y="4" width="553" height="38" backcolor="#FFFFFF" uuid="5d2c9f60-e28f-42c9-bf6c-cd5f2a0cf21d"/>
 			</rectangle>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="695f1588-5de8-455b-aed9-ed6c73eeb60a"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="0" y="4" width="54" height="38" forecolor="#000000" backcolor="#E6E6E6" uuid="695f1588-5de8-455b-aed9-ed6c73eeb60a"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Codigo Empleado]]></text>
+				<text><![CDATA[Código Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="79" y="12" width="158" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="e4e66651-0c88-4063-a2c0-741ac227aa51"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="55" y="4" width="182" height="37" forecolor="#000000" backcolor="#E6E6E6" uuid="e4e66651-0c88-4063-a2c0-741ac227aa51"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre del Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="237" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="b0756311-fe34-46f7-a804-a9a7437a9df2"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="237" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6" uuid="b0756311-fe34-46f7-a804-a9a7437a9df2"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cargo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="316" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="f41035a0-5ba4-4fb1-8489-c2679cd44b21"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="316" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6" uuid="f41035a0-5ba4-4fb1-8489-c2679cd44b21"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Ubicacion]]></text>
+				<text><![CDATA[Ubicación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="395" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="903c871b-fffd-439e-a5d2-46927fe1b1a5"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="396" y="4" width="79" height="37" forecolor="#000000" backcolor="#E6E6E6" uuid="903c871b-fffd-439e-a5d2-46927fe1b1a5"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Fecha de Contratacion]]></text>
+				<text><![CDATA[Fecha de Contratación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="474" y="12" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="dfb2173e-502c-43cf-bf60-fb49c1260741"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="474" y="4" width="79" height="38" forecolor="#000000" backcolor="#E6E6E6" uuid="dfb2173e-502c-43cf-bf60-fb49c1260741"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Salario]]></text>
+				<text><![CDATA[Salario($)]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement x="79" y="4" width="1" height="27" uuid="b737e0fa-3a60-40c8-bb90-14263068fda4"/>
+				<reportElement x="54" y="4" width="1" height="37" uuid="b737e0fa-3a60-40c8-bb90-14263068fda4"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="237" y="4" width="1" height="27" uuid="e9f2514f-8bf2-42ed-bc54-b56ff74588ce"/>
+				<reportElement x="237" y="4" width="1" height="37" uuid="e9f2514f-8bf2-42ed-bc54-b56ff74588ce"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="315" y="4" width="1" height="27" uuid="8540acee-8866-4189-bda7-d708889424e3"/>
+				<reportElement x="315" y="4" width="1" height="38" uuid="8540acee-8866-4189-bda7-d708889424e3"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="394" y="4" width="1" height="27" uuid="894948cc-6f2b-4b03-b2db-071d5a1f4678"/>
+				<reportElement x="394" y="4" width="1" height="37" uuid="894948cc-6f2b-4b03-b2db-071d5a1f4678"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="474" y="4" width="1" height="27" uuid="8fcd407e-204b-45c5-a917-4c4dd84b10ca"/>
+				<reportElement x="474" y="4" width="1" height="37" uuid="8fcd407e-204b-45c5-a917-4c4dd84b10ca"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="22">
+		<band height="24">
 			<textField isStretchWithOverflow="true">
 				<reportElement x="0" y="0" width="54" height="20" uuid="1e6acfee-6c20-4362-bd70-58ef802e549b"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="79" y="0" width="79" height="20" uuid="a4137d74-cbdb-425e-841f-550510eb35d8"/>
+				<reportElement x="55" y="0" width="103" height="20" uuid="a4137d74-cbdb-425e-841f-550510eb35d8"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement x="158" y="0" width="79" height="20" uuid="e89e1ef3-3839-49be-a1b1-bfd4508f78b3"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{apellidoempleado}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="237" y="0" width="79" height="20" uuid="bb36aa86-dc59-4cf8-81a7-a0e32465aaee"/>
@@ -259,17 +255,24 @@
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="395" y="0" width="79" height="20" uuid="12001817-6454-4eed-b1ba-974bde67a060"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fechainiciocontrato}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="474" y="0" width="79" height="20" uuid="84e26bc9-bfd6-4c12-8b0d-9216e598845f"/>
+				<reportElement x="470" y="0" width="79" height="20" uuid="84e26bc9-bfd6-4c12-8b0d-9216e598845f"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[new DecimalFormat("###,###,##0.00").format($F{salarioactual})]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true">
+				<reportElement x="120" y="0" width="79" height="20" uuid="e89e1ef3-3839-49be-a1b1-bfd4508f78b3"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{salarioactual}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{apellidoempleado}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -277,17 +280,25 @@
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
-			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="4" width="555" height="13" backcolor="#FFFFFF" uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3"/>
-				<textElement textAlignment="Right">
-					<font fontName="Times New Roman" isUnderline="true"/>
+		<band height="44">
+			<staticText>
+				<reportElement x="186" y="11" width="192" height="20" uuid="816a5691-ef47-4091-b091-6990786bd367"/>
+				<textElement>
+					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
-			</textField>
+				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
+			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
-		<band/>
+		<band height="19">
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement mode="Opaque" x="18" y="5" width="535" height="13" backcolor="#FFFFFF" uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" isUnderline="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total $" +new DecimalFormat("###,###,##0.00").format($V{salarioactual_1})]]></textFieldExpression>
+			</textField>
+		</band>
 	</summary>
 </jasperReport>
