--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_costocapacitacion.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_costocapacitacion.jrxml
@@ -11,13 +11,28 @@
 	</parameter>
 	<queryString language="SQL">
 		<![CDATA[SELECT  co.`numeropersona` as 'Cantidad de Personas',c.nombrecapacitacion as 'Tema',co.`costopersona` as'Costo por Persomna', (`costocapacitador`+(`numeropersona`*`costopersona`)) as 'Costo Total'
-FROM `costocapacitacion`co,capacitacion c 
+FROM `costocapacitacion`co,capacitacion c
 WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 	</queryString>
 	<field name="Cantidad de Personas" class="java.lang.Integer"/>
 	<field name="Tema" class="java.lang.String"/>
 	<field name="Costo por Persomna" class="java.lang.Float"/>
 	<field name="Costo Total" class="java.lang.Double"/>
+	<variable name="Costo por Persomna_1" class="java.lang.Float" calculation="Sum">
+		<variableExpression><![CDATA[$F{Costo por Persomna}]]></variableExpression>
+	</variable>
+	<variable name="Costo por Persomna_2" class="java.lang.Float" resetType="Page" calculation="Sum">
+		<variableExpression><![CDATA[$F{Costo por Persomna}]]></variableExpression>
+	</variable>
+	<variable name="Costo por Persomna_3" class="java.lang.Float" resetType="Page" calculation="Sum">
+		<variableExpression><![CDATA[$F{Costo por Persomna}]]></variableExpression>
+	</variable>
+	<variable name="Costo Total_1" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{Costo Total}]]></variableExpression>
+	</variable>
+	<variable name="Cantidad de Personas_1" class="java.lang.Integer" calculation="Sum">
+		<variableExpression><![CDATA[$F{Cantidad de Personas}]]></variableExpression>
+	</variable>
 	<background>
 		<band/>
 	</background>
@@ -31,28 +46,28 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="491" y="68" width="70" height="20" uuid="e18cd85d-d4a0-4b0a-ba54-4b0e4647c6d2"/>
+				<reportElement x="73" y="68" width="70" height="20" uuid="e18cd85d-d4a0-4b0a-ba54-4b0e4647c6d2"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="141" y="80" width="265" height="20" uuid="221c8061-dfdf-4ba4-9dc3-db7f4c74c27e"/>
+				<reportElement x="141" y="68" width="265" height="20" uuid="221c8061-dfdf-4ba4-9dc3-db7f4c74c27e"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
 				<text><![CDATA[REPORTE DE COSTOS DE CAPACITACION]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="461" y="88" width="74" height="20" uuid="8ba403ce-a35c-4d69-a99f-53bef029265c"/>
+				<reportElement x="426" y="68" width="74" height="20" uuid="8ba403ce-a35c-4d69-a99f-53bef029265c"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="535" y="88" width="26" height="20" uuid="ccce83d5-fb3d-41f8-b7cf-d7a6f6fdca54"/>
+				<reportElement x="500" y="68" width="26" height="20" uuid="ccce83d5-fb3d-41f8-b7cf-d7a6f6fdca54"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -66,64 +81,64 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="404" y="68" width="114" height="20" uuid="cfc5a73e-6906-4dbd-bc16-465accdd2249"/>
+				<reportElement x="1" y="68" width="114" height="20" uuid="cfc5a73e-6906-4dbd-bc16-465accdd2249"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="162" y="110" width="39" height="20" uuid="bd456708-2f4e-4a2f-b69d-8e7d3d8e155c"/>
+				<reportElement x="172" y="88" width="39" height="20" uuid="bd456708-2f4e-4a2f-b69d-8e7d3d8e155c"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="201" y="108" width="86" height="20" uuid="6b9e8986-0ad7-4cd5-8129-84bc2a08de4e"/>
+				<reportElement x="201" y="88" width="86" height="20" uuid="6b9e8986-0ad7-4cd5-8129-84bc2a08de4e"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<image>
-				<reportElement x="426" y="0" width="123" height="48" uuid="86c863d8-1b25-490a-9fac-1d11993b8ec3"/>
+				<reportElement x="450" y="0" width="104" height="48" uuid="86c863d8-1b25-490a-9fac-1d11993b8ec3"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="-2" y="2" width="143" height="38" uuid="f7426a05-f716-4d95-8402-b221717bdf24"/>
+				<reportElement x="-2" y="2" width="143" height="46" uuid="f7426a05-f716-4d95-8402-b221717bdf24"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="326" y="108" width="100" height="20" uuid="e56a3cb1-566c-4fd4-8a1f-8a91b0eacb94"/>
+				<reportElement x="306" y="88" width="100" height="20" uuid="e56a3cb1-566c-4fd4-8a1f-8a91b0eacb94"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="426" y="108" width="39" height="20" uuid="cc467778-d73d-44df-8e9e-036a7189d624"/>
+				<reportElement x="450" y="48" width="39" height="20" uuid="cc467778-d73d-44df-8e9e-036a7189d624"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="287" y="108" width="39" height="20" uuid="d6e51252-3e7d-4615-aa6f-8b1e7074292a"/>
+				<reportElement x="287" y="88" width="39" height="20" uuid="d6e51252-3e7d-4615-aa6f-8b1e7074292a"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="465" y="108" width="100" height="20" uuid="fccdba09-8dbd-4208-8d26-49781480ec28"/>
+				<reportElement x="485" y="48" width="70" height="20" uuid="fccdba09-8dbd-4208-8d26-49781480ec28"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="10" y="90" width="93" height="20" uuid="adfd7f11-a5c8-433b-b3f1-a32d7c90ee33"/>
+				<reportElement x="2" y="48" width="93" height="20" uuid="adfd7f11-a5c8-433b-b3f1-a32d7c90ee33"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -147,32 +162,32 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 				<reportElement x="0" y="7" width="552" height="28" backcolor="#FFFFFF" uuid="485b08c9-d043-48f5-9407-cea177e8f7f8"/>
 			</rectangle>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="15" width="103" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="6e8d1fb5-782e-4959-b128-fe72caa411fc"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="0" y="8" width="103" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="6e8d1fb5-782e-4959-b128-fe72caa411fc"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Cantidad de Personas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="119" y="15" width="233" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="d7150423-edf8-4a88-a50a-33666c6f26d6"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="104" y="7" width="261" height="28" forecolor="#000000" backcolor="#E6E6E6" uuid="d7150423-edf8-4a88-a50a-33666c6f26d6"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tema]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="366" y="15" width="95" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="3a2220b7-0367-4a79-99d1-35ea6c6bcbab"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="366" y="8" width="100" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="3a2220b7-0367-4a79-99d1-35ea6c6bcbab"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Costo por Persona]]></text>
+				<text><![CDATA[Costo por Persona($)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="461" y="15" width="91" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="b6ead696-335c-474a-85ff-2cb3431470c8"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="466" y="8" width="86" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="b6ead696-335c-474a-85ff-2cb3431470c8"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Costo Total]]></text>
+				<text><![CDATA[Costo Total($)]]></text>
 			</staticText>
 			<line direction="BottomUp">
 				<reportElement x="103" y="8" width="1" height="27" uuid="8cb3bb67-a42c-458e-ae3c-5de613a283b2"/>
@@ -188,28 +203,28 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 	<detail>
 		<band height="20">
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Transparent" x="0" y="0" width="80" height="20" forecolor="#000000" uuid="47f560f6-eb79-4d89-bc61-39ad78b9c149"/>
-				<textElement textAlignment="Right">
+				<reportElement mode="Transparent" x="0" y="0" width="103" height="20" forecolor="#000000" uuid="47f560f6-eb79-4d89-bc61-39ad78b9c149"/>
+				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Cantidad de Personas}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Transparent" x="119" y="0" width="233" height="20" forecolor="#000000" uuid="4c370320-c883-447f-8ca7-cb444ec7f196"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="104" y="0" width="248" height="20" forecolor="#000000" uuid="4c370320-c883-447f-8ca7-cb444ec7f196"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Tema}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Transparent" x="366" y="0" width="79" height="20" forecolor="#000000" uuid="f8b7f725-21d8-4bf4-ae95-d3790a672ac4"/>
+				<reportElement mode="Transparent" x="366" y="0" width="99" height="20" forecolor="#000000" uuid="f8b7f725-21d8-4bf4-ae95-d3790a672ac4"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Costo por Persomna}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement mode="Transparent" x="474" y="0" width="61" height="20" forecolor="#000000" uuid="144ced2e-0cbd-42f0-a2d2-de110da3aa9a"/>
+				<reportElement mode="Transparent" x="466" y="0" width="86" height="20" forecolor="#000000" uuid="144ced2e-0cbd-42f0-a2d2-de110da3aa9a"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -221,17 +236,32 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
+		<band height="17"/>
+	</pageFooter>
+	<summary>
+		<band height="60">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="4" width="555" height="13" backcolor="#FFFFFF" uuid="81777815-467e-41ee-92d9-16f96509fa41"/>
+				<reportElement mode="Opaque" x="-3" y="47" width="555" height="13" backcolor="#FFFFFF" uuid="81777815-467e-41ee-92d9-16f96509fa41"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="365" y="12" width="100" height="20" uuid="55f7c82f-04b8-4057-90ac-b49d32e67d27"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[$V{Costo por Persomna_3}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="463" y="12" width="89" height="20" uuid="828d92b8-b62e-4883-8c2b-1bf065840689"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[$V{Costo Total_1}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="4" y="12" width="100" height="20" uuid="1ad602ce-196c-4d99-bb21-b5c31c09f2f9"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$V{Cantidad de Personas_1}]]></textFieldExpression>
+			</textField>
 		</band>
-	</pageFooter>
-	<summary>
-		<band/>
 	</summary>
 </jasperReport>
