--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_despidos.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_despidos.jrxml
@@ -33,13 +33,22 @@
 	<field name="sueldobase" class="java.lang.Float">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<variable name="sueldobase_1" class="java.lang.Float" resetType="Page" calculation="Sum">
+		<variableExpression><![CDATA[$F{sueldobase}]]></variableExpression>
+	</variable>
+	<variable name="sueldobase_2" class="java.lang.Float" calculation="Sum">
+		<variableExpression><![CDATA[$F{sueldobase}]]></variableExpression>
+	</variable>
+	<variable name="sueldobase_3" class="java.lang.Float" calculation="Sum">
+		<variableExpression><![CDATA[$F{sueldobase}]]></variableExpression>
+	</variable>
 	<background>
 		<band/>
 	</background>
 	<title>
 		<band height="138">
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="485" y="76" width="70" height="20" uuid="dda4378c-4329-4e1b-a6d1-425a5837cddc"/>
+				<reportElement x="73" y="73" width="70" height="20" uuid="dda4378c-4329-4e1b-a6d1-425a5837cddc"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -50,7 +59,7 @@
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
-				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
+				<text><![CDATA[MINISTERIO DE JUSTICIA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="143" y="20" width="265" height="20" uuid="fad3810c-cb69-4450-a5fb-88bc5c52149c"/>
@@ -60,88 +69,88 @@
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="465" y="96" width="74" height="20" uuid="3e648985-c6aa-4373-b967-1e2d2d9c1b91"/>
+				<reportElement x="421" y="71" width="74" height="20" uuid="3e648985-c6aa-4373-b967-1e2d2d9c1b91"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="130" y="96" width="265" height="20" uuid="f1353065-9401-447a-908f-e7e6c2021c35"/>
+				<reportElement x="143" y="71" width="265" height="20" uuid="f1353065-9401-447a-908f-e7e6c2021c35"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" isBold="true"/>
 				</textElement>
 				<text><![CDATA[REPORTE DE DESPIDOS]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="539" y="96" width="26" height="20" uuid="8ea124ca-2de6-4cb6-b560-a8abe4d1713c"/>
+				<reportElement x="495" y="71" width="26" height="20" uuid="8ea124ca-2de6-4cb6-b560-a8abe4d1713c"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="408" y="76" width="114" height="20" uuid="29cf3f46-1b2c-4677-bfff-7d741debe291"/>
+				<reportElement x="11" y="73" width="94" height="20" uuid="29cf3f46-1b2c-4677-bfff-7d741debe291"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
-				<text><![CDATA[Fecha de Generacion:]]></text>
+				<text><![CDATA[Fecha de Generación:]]></text>
 			</staticText>
 			<image>
-				<reportElement x="0" y="6" width="143" height="38" uuid="fcba1bf7-b575-4c9b-9f58-83b5e7996b48"/>
+				<reportElement x="0" y="0" width="143" height="54" uuid="fcba1bf7-b575-4c9b-9f58-83b5e7996b48"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="308" y="114" width="100" height="20" uuid="9910ef37-18ed-4563-8745-7bff4dab8d72"/>
+				<reportElement x="308" y="91" width="100" height="20" uuid="9910ef37-18ed-4563-8745-7bff4dab8d72"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="455" y="114" width="100" height="20" uuid="f515c1b8-7bc0-44a4-851c-bfc842176035"/>
+				<reportElement x="474" y="57" width="65" height="20" uuid="f515c1b8-7bc0-44a4-851c-bfc842176035"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="130" y="114" width="39" height="20" uuid="156fd6bd-47d4-4305-8821-ef089f013f18"/>
+				<reportElement x="179" y="91" width="39" height="20" uuid="156fd6bd-47d4-4305-8821-ef089f013f18"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="94" width="84" height="20" uuid="7afe2c9b-0ab2-4b79-8519-c90452d6e7a4"/>
+				<reportElement x="11" y="53" width="84" height="20" uuid="7afe2c9b-0ab2-4b79-8519-c90452d6e7a4"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[pnt_reporte_desp]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="169" y="114" width="100" height="20" uuid="f6e780a8-3d6c-4956-8e97-3568d49240e5"/>
+				<reportElement x="205" y="91" width="100" height="20" uuid="f6e780a8-3d6c-4956-8e97-3568d49240e5"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="269" y="114" width="39" height="20" uuid="0e51812c-0f20-4c6b-b1f8-4e3650c4399e"/>
+				<reportElement x="282" y="91" width="39" height="20" uuid="0e51812c-0f20-4c6b-b1f8-4e3650c4399e"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="416" y="114" width="39" height="20" uuid="433e98a1-5f5f-447a-910e-1c516b1df05b"/>
+				<reportElement x="442" y="57" width="39" height="20" uuid="433e98a1-5f5f-447a-910e-1c516b1df05b"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<image>
-				<reportElement x="416" y="6" width="123" height="48" uuid="f7ce138a-1f2c-4a6e-8144-aef692f79039"/>
+				<reportElement x="442" y="2" width="123" height="54" uuid="f7ce138a-1f2c-4a6e-8144-aef692f79039"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
@@ -162,46 +171,46 @@
 				<reportElement x="0" y="0" width="552" height="28" backcolor="#FFFFFF" uuid="58d90ed3-57aa-4a96-8632-63228be64712"/>
 			</rectangle>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="0" width="142" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="5b41b3a5-ca68-416b-b74a-121d62730661"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="0" y="0" width="142" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="5b41b3a5-ca68-416b-b74a-121d62730661"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre del Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="143" y="0" width="64" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="8f49158b-50fa-492d-bf23-1e92033042cb"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="143" y="0" width="75" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="8f49158b-50fa-492d-bf23-1e92033042cb"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Ubicacion]]></text>
+				<text><![CDATA[Ubicación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="218" y="0" width="75" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="35a434c8-0888-4184-98d7-7f4514e38d9c"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="218" y="0" width="88" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="35a434c8-0888-4184-98d7-7f4514e38d9c"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Plaza]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="306" y="0" width="76" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="019c7d17-34ab-471a-b7cb-9cc60d71fe7f"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="306" y="0" width="76" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="019c7d17-34ab-471a-b7cb-9cc60d71fe7f"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Numero Partida]]></text>
+				<text><![CDATA[Número Partida]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="382" y="0" width="92" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="9c07557b-6a5e-4d3b-a8c2-cdac24d22a1b"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="382" y="0" width="92" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="9c07557b-6a5e-4d3b-a8c2-cdac24d22a1b"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Numero Subpartida]]></text>
+				<text><![CDATA[Número Subpartida]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="474" y="0" width="79" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="9d8701df-d188-470d-b6a4-01fafbe56e84"/>
-				<textElement textAlignment="Center">
+				<reportElement mode="Transparent" x="474" y="0" width="79" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="9d8701df-d188-470d-b6a4-01fafbe56e84"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Sueldo Base]]></text>
+				<text><![CDATA[Sueldo Base($)]]></text>
 			</staticText>
 			<line direction="BottomUp">
 				<reportElement x="142" y="0" width="1" height="27" uuid="9827196f-a6fa-4ac3-99af-85ccdf59286e"/>
@@ -250,14 +259,14 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement x="318" y="0" width="64" height="20" uuid="51207c76-8778-4714-ba47-9255f7c84927"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{numeropartidapuesto}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement x="408" y="0" width="66" height="20" uuid="3d2ce0cc-14a6-4c60-ad69-fc726c15e2ab"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
@@ -269,7 +278,11 @@
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{sueldobase}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new DecimalFormat("###,###,##0.00").format($F{sueldobase})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="552" y="0" width="100" height="20" forecolor="#FFFFFF" uuid="06111304-5dc1-4248-9c33-1c31e6c03a9f"/>
+				<textFieldExpression><![CDATA[$V{sueldobase_1}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -277,17 +290,25 @@
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
-			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="4" width="555" height="13" backcolor="#FFFFFF" uuid="72a75769-3862-445a-bfa0-38f6dfd581f9"/>
-				<textElement textAlignment="Right">
-					<font fontName="Times New Roman" isUnderline="true"/>
+		<band height="47">
+			<staticText>
+				<reportElement x="196" y="21" width="192" height="20" uuid="bf2df9b4-47e3-4f09-9798-ed366bbaaeca"/>
+				<textElement>
+					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
-			</textField>
+				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
+			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
-		<band/>
+		<band height="43">
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement mode="Opaque" x="17" y="17" width="535" height="13" backcolor="#FFFFFF" uuid="4db35d06-77ba-4e2e-8a89-30be5aa48773"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" isUnderline="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total $" +new DecimalFormat("###,###,##0.00").format($V{sueldobase_3})]]></textFieldExpression>
+			</textField>
+		</band>
 	</summary>
 </jasperReport>
